[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "just_cache"
version = "0.1.0"
dependencies = []
requires-python = ">= 3.10"
description="A simple pure Python implementation of depth-related calculations."
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/mntusr/just_cache"

[tool.isort]
profile = "black"